--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 <title>WEDOverse</title>
 <link href="/index.css" rel=stylesheet>
+<link rel="icon" type="image/x-icon" href="/wedo.ico">
 <!-- <link href="/mithril-ui/index.css" rel=stylesheet>
 <link href="/mithril-ui/menu/menu.css" rel=stylesheet> -->
 <!-- webgpu -->
